--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ body {
   position: relative;
 }
 .text-block__h {
-  font-size: 2rem;
+  font-size: calc(var(--index) * 1.55);
   line-height: 2.4rem;
   color: var(--color-header);
   margin-bottom: 1.5rem;
@@ -105,6 +105,7 @@ body {
 .text-block__p {
   line-height: 1.75;
   font-size: 1.5rem;
+  font-size: calc(var(--index) * 1);
 }
 
 .gallery__img-collection {
@@ -115,4 +116,46 @@ body {
   max-height: 180vh;
   border-radius: 8px;
   overflow: hidden;
+}
+
+@media (max-width: 1024px) {
+  .hero {
+    width: calc(var(--index) * 25);
+    position: absolute;
+    left: 37vw;
+    top: 22vh;
+  }
+  .main-title {
+    font-size: calc(var(--index) * 5);
+  }
+  .gallery {
+    display: block;
+    padding: calc(var(--index) * 4) 0;
+  }
+  .container {
+    padding: 1rem;
+  }
+  .text-block__p {
+    line-height: 1.5;
+    font-size: calc(var(--index) * 1.5);
+  }
+  .text-block__h {
+    font-size: calc(var(--index) * 2);
+    line-height: 2.4rem;
+    color: var(--color-header);
+    margin-bottom: 1.5rem;
+  }
+
+  .gallery__left {
+    margin-top: calc(var(--gallery-gap) * 1);
+  }
+  .gallery__item {
+    max-width: 100%;
+    margin-bottom: calc(var(--gallery-gap) * 0.2);
+    margin-top: calc(var(--gallery-gap) * 0.2);
+  }
+  .gallery__right .gallery__item {
+    margin: 0;
+    margin-top: calc(var(--gallery-gap) * 0.2);
+  }
 }
